# ez2z

./: README.md  insertDB.py  pyproject.toml  song.csv  song.py
src/ez2z/: album.py  app.py  artist.py  ids.py  insertDB.py  song.py  test.py  track.py
src/ez2z.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
