[project]
name = "ez2z"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "oddsummer56", email = "oddsummer56@gmail.com"},
]
dependencies = [
    "pymysql>=1.1.1",
    "selenium>=4.26.1",
    "bs4>=0.0.2",
    "requests>=2.32.3",
    "webdriver-manager>=4.0.2",
    "beautifulsoup4>=4.12.3",
    "chromedriver-autoinstaller>=0.6.4",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.pdm]
distribution = false
